--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
         <ul>
             <li>Lesson #02: <a href="Lesson02/design-principles.html">Design Principles</a></li>
-            <li>Lesson #03: <a href="">Title</a></li>
+            <li>Lesson #03: <a href="Lesson03/index.html">High peak Chamber</a></li>
             <li>Lesson #04: <a href="">Title</a></li>
             <li>Lesson #05: <a href="">Title</a></li>
             <li>Lesson #06: <a href="">Title</a></li>
