--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         
         <ul>
             <li>Lesson #02: <a href="Lesson02/design-principles.html">Design Principles</a></li>
-            <li>Lesson #03: <a href="Lesson03/index.html">High peak Chamber</a></li>
-            <li>Lesson #04: <a href="">Title</a></li>
+            <li>Lesson #03: <a href="Lesson03/index.html">High peak Chamber - Website Planning Document</a></li>
+            <li>Lesson #04: <a href="Lesson04/index.html">High peak Chamber - Home Page Build</a></li>
             <li>Lesson #05: <a href="">Title</a></li>
             <li>Lesson #06: <a href="">Title</a></li>
             <li>Lesson #07: <a href="">Title</a></li>
