--- a/Lesson04/index.html
+++ b/Lesson04/index.html
@@ -26,22 +26,44 @@
     <header>
         <div class="company-name">
             <h1>High Peak Chamber</h1>
-            <img src="images/logo.png" alt="logo"> 
+            <img src="images/logo.png" alt="logo">
             <aside>dia y hora </aside>
         </div>
         <nav>
-            <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
+            <div id="hamburgerBtn">
+                <button>
+                    <span>&#9776;</span>
+                    <span>X</span>
+                </button>
+                <a href="https://www.facebook.com" target="_blank"><img src="images/facebook.png"  alt="facebook"></a>
+                <a href="http://www.Instagram.com" target="_blank">
+                    <img class="media" src="images/instagram.png" alt="instagram"></a>
+            </div>
             <ul id="primaryNav">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="target-audience.html">Target Audience</a></li>
                 <li><a href="color-scheme.html">Color Scheme</a></li>
                 <li><a href="typography.html">Typography</a></li>
+                <li><a href="https://www.facebook.com" target="_blank">
+                        <img class="media" src="images/facebook.png" alt="facebook"></a>
+                    <a href="http://www.Instagram.com" target="_blank">
+                        <img class="media" src="images/instagram.png" alt="instagram"></a>
+                </li>
             </ul>
         </nav>
-
     </header>
     <main>
-
+        <section>Hero with site name and call to action</section>
+        <section>New Release</section>
+        <section id="spotlights">
+            <section>Spotlight 1</section>
+            <section>Spotlight 1</section>
+            <section>Spotlight 1</section>
+        </section>
+        <section>Join</section>
+        <section>Events</section>
+        <section>Weather</section>
+        
 
     </main>
     <footer>
