--- a/Lesson04/index.html
+++ b/Lesson04/index.html
@@ -41,9 +41,9 @@
             </div>
             <ul id="primaryNav">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="target-audience.html">Target Audience</a></li>
-                <li><a href="color-scheme.html">Color Scheme</a></li>
-                <li><a href="typography.html">Typography</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">About</a></li>
                 <li><a href="https://www.facebook.com" target="_blank">
                         <img class="media" src="images/facebook.png" alt="facebook"></a>
                     <a href="http://www.Instagram.com" target="_blank">
@@ -53,17 +53,18 @@
         </nav>
     </header>
     <main>
-        <section>Hero with site name and call to action</section>
-        <section>New Release</section>
+        <div class="main-grid">
+        <section id="hero" >Hero with site name and call to action</section>
+        <section id="news-release">New Release</section>
         <section id="spotlights">
-            <section>Spotlight 1</section>
-            <section>Spotlight 1</section>
-            <section>Spotlight 1</section>
+            <section id="spot1">Spotlight 1</section>
+            <section id="spot2">Spotlight 1</section>
+            <section id="spot3">Spotlight 1</section>
         </section>
-        <section>Join</section>
-        <section>Events</section>
-        <section>Weather</section>
-        
+        <section id="join">Join</section>
+        <section id="event">Events</section>
+        <section id="weather">Weather</section>
+    </div>
 
     </main>
     <footer>
