--- a/Lesson03/target-audience.html
+++ b/Lesson03/target-audience.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?&family=Titillium+Web&family=Source+Sans+Pro&display=swap"
         rel="stylesheet">
 
+    <link rel="shortcut icon" href="../images/favicon.ico">
     <!-- Styles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/small.css">
