--- a/Lesson04/index.html
+++ b/Lesson04/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?&family=Titillium+Web&family=Source+Sans+Pro&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="shortcut icon" href="../images/favicon.ico">
     <!-- Styles -->
     <link
       rel="stylesheet"
