--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,6 +29,9 @@
   </head>
 
   <body>
+    <div id="join-us-banner">
+      <span>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</span>
+    </div>
     <header>
       <div class="company-name">
         <h1>High Peak Chamber</h1>
