--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,101 +1,109 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WDD230 Assignment Portal | Cristian Fernandez</title>
-    <meta
-      name="description"
-      content="Assignment portal page for WDD230: Web Frontend Development at Brigham Young University-Idaho"
-    />
 
-    <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?&family=Titillium+Web&family=Source+Sans+Pro&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="shortcut icon" href="../images/favicon.ico">
-    <!-- Styles -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-    />
-    <link rel="stylesheet" href="css/small.css" />
-    <link rel="stylesheet" href="css/medium.css" />
-    <link rel="stylesheet" href="css/large.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WDD230 Assignment Portal | Cristian Fernandez</title>
+  <meta name="description"
+    content="Assignment portal page for WDD230: Web Frontend Development at Brigham Young University-Idaho" />
 
-  <body>
-    <div id="join-us-banner">
-      <span>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</span>
+  <!-- fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?&family=Titillium+Web&family=Source+Sans+Pro&display=swap"
+    rel="stylesheet" />
+  <link rel="shortcut icon" href="../images/favicon.ico">
+  <!-- Styles -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
+  <link rel="stylesheet" href="css/small.css" />
+  <link rel="stylesheet" href="css/medium.css" />
+  <link rel="stylesheet" href="css/large.css" />
+</head>
+
+<body>
+  <div id="join-us-banner">
+    <span>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</span>
+  </div>
+  <header>
+    <div class="company-name">
+      <h1>High Peak Chamber</h1>
+      <img src="images/logo.png" alt="logo" />
+      <aside>dia y hora</aside>
     </div>
-    <header>
-      <div class="company-name">
-        <h1>High Peak Chamber</h1>
-        <img src="images/logo.png" alt="logo" />
-        <aside>dia y hora</aside>
+    <nav>
+      <div id="hamburgerBtn">
+        <button>
+          <span>&#9776;</span>
+          <span>X</span>
+        </button>
+        <a href="https://www.facebook.com" target="_blank"><img src="images/facebook.png" alt="facebook" /></a>
+        <a href="http://www.Instagram.com" target="_blank">
+          <img class="media" src="images/instagram.png" alt="instagram" /></a>
       </div>
-      <nav>
-        <div id="hamburgerBtn">
-          <button>
-            <span>&#9776;</span>
-            <span>X</span>
-          </button>
-          <a href="https://www.facebook.com" target="_blank"
-            ><img src="images/facebook.png" alt="facebook"
-          /></a>
+      <ul id="primaryNav">
+        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">About</a></li>
+        <li>
+          <a href="https://www.facebook.com" target="_blank">
+            <img class="media" src="images/facebook.png" alt="facebook" /></a>
           <a href="http://www.Instagram.com" target="_blank">
-            <img class="media" src="images/instagram.png" alt="instagram"
-          /></a>
-        </div>
-        <ul id="primaryNav">
-          <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">About</a></li>
-          <li>
-            <a href="https://www.facebook.com" target="_blank">
-              <img class="media" src="images/facebook.png" alt="facebook"
-            /></a>
-            <a href="http://www.Instagram.com" target="_blank">
-              <img class="media" src="images/instagram.png" alt="instagram"
-            /></a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <div class="main-grid">
-        <section id="hero">Hero with site name and call to action</section>
-        <section id="news-release">New Release</section>
-        <section id="spotlights">
-          <section id="spot1">Spotlight 1</section>
-          <section id="spot2">Spotlight 2</section>
-          <section id="spot3">Spotlight 3</section>
+            <img class="media" src="images/instagram.png" alt="instagram" /></a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <div class="main-grid">
+      <section id="hero">
+        <h2>Welcome to High Peak Chamber</h2>
+        <button id="hero-sec-button" class="button-join">Join us!</button>
+        
+        <img src="images/city.png">
+        
+      </section>
+      <section id="news-release">
+        <h3>New Release</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste hic placeat cupiditate aperiam laudantium ex, quo maxime in delectus possimus. Earum reiciendis error vero adipisci quo tempore expedita provident ad.</p>
+      </section>
+      <section id="spotlights">
+        <section id="spot1">Spotlight 1</section>
+        <section id="spot2">Spotlight 2</section>
+        <section id="spot3">Spotlight 3</section>
+      </section>
+      <section id="join">
+        <p>Discover how to join the chamber of commerce and how it will benefit your organization!</p>
+        <button id="join-sec-button" class="button-join">Join us!</button>
+      </section>
+      <section id="event">
+        <h3>Events</h3>
         </section>
-        <section id="join">Join</section>
-        <section id="event">Events</section>
-        <section id="weather">Weather</section>
+      <section id="weather">
+        <h3>Weather</h3></section>
+
+    </div>
+  </main>
+  <footer>
+    <div class="f-wrapper">
+      <img src="images/logo.png" />
+      <div class="address">
+        <h2>High Peak Chamber</h2>
+        <p>123 Main St</p>
+        <p>American Fok, UT</p>
       </div>
-    </main>
-    <footer>
-      <div class="f-wrapper">
-        <img src="images/logo.png" />
-        <div class="address">
-          <h2>High Peak Chamber</h2>
-          <p>123 Main St</p>
-          <p>American Fok, UT</p>
-        </div>
-        <div class="contact">
-            <p>Info@highpeakchamber.com</p>
-            <p>+(801) 123-4567</p>
-        </div>
+      <div class="contact">
+        <p>Info@highpeakchamber.com</p>
+        <p>+(801) 123-4567</p>
       </div>
-      <div class="copyright"><p>&copy; <span id="year">2022</span> | Cristian Fernandez | Utah</p></div>
-    </footer>
-    <script src="js/scripts.js"></script>
-  </body>
+    </div>
+    <div class="copyright">
+      <p>&copy; <span id="year">2022</span> | Cristian Fernandez | Utah</p>
+    </div>
+  </footer>
+  <script src="js/scripts.js"></script>
+</body>
+
 </html>
