--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li>Lesson #03: <a href="Lesson03/index.html">High peak Chamber - Website Planning Document</a></li>
             <li>Lesson #04: <a href="Lesson04/index.html">High peak Chamber - Home Page Build</a></li>
             <li>Lesson #05-1: <a href="Lesson05/bom.html">bom</a></li>
-            <li>Lesson #05-2: <a href="">Title</a></li>
+            <li>Lesson #05-2: <a href="chamber/index.html">Chamber Website</a></li>
             <li>Lesson #06: <a href="">Title</a></li>
             <li>Lesson #07: <a href="">Title</a></li>
             <li>Lesson #08: <a href="">Title</a></li>
