--- a/chamber/index.html
+++ b/chamber/index.html
@@ -62,7 +62,7 @@
         <h2>Welcome to High Peak Chamber</h2>
         <button id="hero-sec-button" class="button-join">Join us!</button>
         <picture class="hero-picture">
-          <img src="images/wdd230-org-large-6000.webp" alt="hero picture" sizes="50%" srcset="images/wdd230-org-small-1000.webp 360w,
+          <img src="images/wdd230-org-large-6000.webp" alt="hero picture" sizes="50vw" srcset="images/wdd230-org-small-1000.webp 360w,
                   images/wdd230-org-medium-3000.webp 610w,
                   images/wdd230-org-large-6000.webp 820w">
 
@@ -115,7 +115,7 @@
   </main>
   <footer>
     <div class="f-wrapper">
-      <img src="images/logo.webp" />
+      <img src="images/logo.webp" alt="logo">
       <div class="address">
         <h2>High Peak Chamber</h2>
         <p>123 Main St</p>
