--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,7 +46,7 @@
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Contact</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="discover.html">Discover</a></li>
         <li>
           <a href="https://www.facebook.com" target="_blank">
             <img class="media" src="images/facebook.webp" alt="facebook" /></a>
