--- a/Lesson07/lazyload.html
+++ b/Lesson07/lazyload.html
@@ -26,11 +26,11 @@
     </header>
     <main>
 
-        <picture><img src="images/placeholder.jpg" alt="placeholder" data-src="images/A.jpg"></picture>
-        <picture><img src="images/placeholder.jpg" alt="placeholder" data-src="images/B.jpg"></picture>
-        <picture><img src="images/placeholder.jpg" alt="placeholder" data-src="images/C.jpg"></picture>
-        <picture><img src="images/placeholder.jpg" alt="placeholder" data-src="images/D.jpg"></picture>
-        <picture><img src="images/placeholder.jpg" alt="placeholder" data-src="images/E.jpg"></picture>
+        <picture><img src="images/placeholder.jpg" alt="place-holder" data-src="images/A.jpg"></picture>
+        <picture><img src="images/placeholder.jpg" alt="place-holder" data-src="images/B.jpg"></picture>
+        <picture><img src="images/placeholder.jpg" alt="place-holder" data-src="images/C.jpg"></picture>
+        <picture><img src="images/placeholder.jpg" alt="place-holder" data-src="images/D.jpg"></picture>
+        <picture><img src="images/placeholder.jpg" alt="place-holder" data-src="images/E.jpg"></picture>
 
 
     </main>
