--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -64,8 +64,68 @@ Location:  American Fork, Utah County, Utah, United States, http://sws.geonames.
 
 
     <main>
+        
+        <section class="discover-holder">
+            <aside class="last-days">Last time browsing this page was <span class="visits"></span> day<span class="multi-days"></span> ago.</aside>
+            <picture><img src="images/place-holder.webp" alt="place-holder" data-src="images/Utah.webp"></picture>
+            <p>As of the census of 2010, there were 26,263 people in 7,098 households residing in the city. The
+                population density was 2,853.7 people per square mile (1,101.5/km2). The racial makeup of the city was
+                88.8% White (non-Hispanic), 7.4% Hispanic or Latino. 0.9% Asian, 0.5% Native American, 0.5% Pacific
+                Islander, 0.4% African American, and 2.4% from two or more races. 3.5% of the population were
+                foreign-born.</p>
+            <div class="sep-holder">
+                <div class="sep1"></div>
+                <div class="sep2"></div>
+                <div class="sep3"></div>
+            </div>
 
-
+            <picture><img src="images/place-holder.webp" alt="place-holder" data-src="images/first-chapel.webp">
+            </picture>
+            <p>This is an image of the original American Fork First Ward Chapel on 300 East.
+                It was built in 1903. Later, the ward was divided into the First and Fifth wards.
+                This building was demolished in 1957.
+                Location: American Fork, Utah County, Utah, United States</p>
+            <div class="sep-holder">
+                <div class="sep1"></div>
+                <div class="sep2"></div>
+                <div class="sep3"></div>
+            </div>
+            <picture><img src="images/place-holder.webp" alt="place-holder" data-src="images/Mount-Timpanogos.webp">
+            </picture>
+            <p>Mount Timpanogos, often referred to as Timp, is the second-highest mountain in Utah's Wasatch Range.
+                Timpanogos rises to an elevation of 11,752 ft (3,582 m) above sea level in the Uinta-Wasatch-Cache
+                National Forest. With 5,270 ft (1,610 m) of topographic prominence, Timpanogos is the 47th-most
+                prominent mountain in the contiguous United States.</p>
+            <div class="sep-holder">
+                <div class="sep1"></div>
+                <div class="sep2"></div>
+                <div class="sep3"></div>
+            </div>
+            <picture><img src="images/place-holder.webp" alt="place-holder" data-src="images/AF-Temple.webp"></picture>
+            <p>The temple was announced by Gordon B. Hinckley, then a counselor in the church's First Presidency, in
+                general conference on October 3, 1992. The exact location, on land in American Fork previously used as a
+                church welfare farm, was announced at the following conference six months later. The Mount Timpanogos
+                Utah Temple overlooks the cities of American Fork, Cedar Hills, Highland and Alpine as well as nearby
+                Utah Lake. Mount Timpanogos, a majestic 11,750-foot peak, and the Wasatch Mountains serve as a backdrop.
+            </p>
+            <div class="sep-holder">
+                <div class="sep1"></div>
+                <div class="sep2"></div>
+                <div class="sep3"></div>
+            </div>
+            <picture><img src="images/place-holder.webp" alt="place-holder" data-src="images/cave.webp"></picture>
+            <p>Timpanogos Cave (TICA) National Monument is a 250-acre site surrounded by forest service wilderness areas
+                and easily accessible by more than one million people along the Wasatch Front, Utah.
+                It protects a cave system on Mount Timpanogos in Northern Utah's Wasatch
+                Mountains in American Fork Canyon. There are three caves in the National Monument: Hansen Cave, Middle
+                Cave, and Timpanogos Cave.</p>
+            <div class="sep-holder">
+                <div class="sep1"></div>
+                <div class="sep2"></div>
+                <div class="sep3"></div>
+            </div>
+            <p></p>
+        </section>
 
 
 
@@ -74,7 +134,10 @@ Location:  American Fork, Utah County, Utah, United States, http://sws.geonames.
         <p> &copy; <span id="year"></span> | Cristian Fernandez | Utah </p>
         <span id="modified"></span>
     </footer>
-    <script src="js/main.js"></script>
+    <script src="js/lazyload.js"></script>
+    <!-- <script src="js/main.js"></script> -->
+    <script src="js/scripts.js"></script>
+    <script src="js/windchill.js"></script>
 </body>
 
 </html>
