--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -67,7 +67,7 @@ Location:  American Fork, Utah County, Utah, United States, http://sws.geonames.
         
         <section class="discover-holder">
             <aside class="last-days">Last time browsing this page was <span class="visits"></span> day<span class="multi-days"></span> ago.</aside>
-            <picture><img src="images/place-holder.webp" alt="place-holder" data-src="images/Utah.webp"></picture>
+            <picture><img class="opa" src="images/place-holder.webp" alt="place-holder" data-src="images/Utah.webp"></picture>
             <p>As of the census of 2010, there were 26,263 people in 7,098 households residing in the city. The
                 population density was 2,853.7 people per square mile (1,101.5/km2). The racial makeup of the city was
                 88.8% White (non-Hispanic), 7.4% Hispanic or Latino. 0.9% Asian, 0.5% Native American, 0.5% Pacific
@@ -79,7 +79,7 @@ Location:  American Fork, Utah County, Utah, United States, http://sws.geonames.
                 <div class="sep3"></div>
             </div>
 
-            <picture><img src="images/place-holder.webp" alt="place-holder" data-src="images/first-chapel.webp">
+            <picture><img class="b-round" src="images/place-holder.webp" alt="place-holder" data-src="images/first-chapel.webp">
             </picture>
             <p>This is an image of the original American Fork First Ward Chapel on 300 East.
                 It was built in 1903. Later, the ward was divided into the First and Fifth wards.
@@ -90,7 +90,7 @@ Location:  American Fork, Utah County, Utah, United States, http://sws.geonames.
                 <div class="sep2"></div>
                 <div class="sep3"></div>
             </div>
-            <picture><img src="images/place-holder.webp" alt="place-holder" data-src="images/Mount-Timpanogos.webp">
+            <picture><img class="blur" src="images/place-holder.webp" alt="place-holder" data-src="images/Mount-Timpanogos.webp">
             </picture>
             <p>Mount Timpanogos, often referred to as Timp, is the second-highest mountain in Utah's Wasatch Range.
                 Timpanogos rises to an elevation of 11,752 ft (3,582 m) above sea level in the Uinta-Wasatch-Cache
@@ -101,7 +101,7 @@ Location:  American Fork, Utah County, Utah, United States, http://sws.geonames.
                 <div class="sep2"></div>
                 <div class="sep3"></div>
             </div>
-            <picture><img src="images/place-holder.webp" alt="place-holder" data-src="images/AF-Temple.webp"></picture>
+            <picture><img class="trans" src="images/place-holder.webp" alt="place-holder" data-src="images/AF-Temple.webp"></picture>
             <p>The temple was announced by Gordon B. Hinckley, then a counselor in the church's First Presidency, in
                 general conference on October 3, 1992. The exact location, on land in American Fork previously used as a
                 church welfare farm, was announced at the following conference six months later. The Mount Timpanogos
@@ -113,7 +113,7 @@ Location:  American Fork, Utah County, Utah, United States, http://sws.geonames.
                 <div class="sep2"></div>
                 <div class="sep3"></div>
             </div>
-            <picture><img src="images/place-holder.webp" alt="place-holder" data-src="images/cave.webp"></picture>
+            <picture><img class="b-shadow" src="images/place-holder.webp" alt="place-holder" data-src="images/cave.webp"></picture>
             <p>Timpanogos Cave (TICA) National Monument is a 250-acre site surrounded by forest service wilderness areas
                 and easily accessible by more than one million people along the Wasatch Front, Utah.
                 It protects a cave system on Mount Timpanogos in Northern Utah's Wasatch
