--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li>Lesson #05-1: <a href="Lesson05/bom.html">bom</a></li>
             <li>Lesson #05-2: <a href="chamber/index.html">Chamber Website</a></li>
             <li>Lesson #06: <a href="chamber/index.html">Chamber Website - Responsive Design</a></li>
-            <li>Lesson #07: <a href="Lesson07/lazyload.html">Lazy Load</a></li>
+            <li>Lesson #07: <a href="Lesson07/lazyload.html">Lazy Load</a>, <a href="chamber/index.html">High Peak Chamber</a></li>
             <li>Lesson #08: <a href="">Title</a></li>
             <li>Lesson #09: <a href="">Title</a></li>
             <li>Lesson #10: <a href="">Title</a></li>
