--- a/Lesson07/lazyload.html
+++ b/Lesson07/lazyload.html
@@ -38,7 +38,7 @@
         <p> &copy; <span id="year"></span> | Cristian Fernandez | Utah </p>
         <span id="modified"></span>
     </footer>
-    <script src="js/main.js"></script>
+    <script src="js/lazyload.js"></script>
 </body>
 
 </html>
