--- a/chamber/index.html
+++ b/chamber/index.html
@@ -60,7 +60,8 @@
     <div class="main-grid">
       <section id="hero">
         <h2>Welcome to High Peak Chamber</h2>
-        <button id="hero-sec-button" class="button-join">Join us!</button>
+        <a href="join.html" id="hero-sec-button" class="button-join">Join us!</a>
+        
         <picture class="hero-picture">
           <img src="images/wdd230-org-large-6000.webp" alt="hero picture" sizes="50vw" srcset="images/wdd230-org-small-1000.webp 360w,
                   images/wdd230-org-medium-3000.webp 610w,
@@ -82,7 +83,7 @@
       </section>
       <section id="join">
         <p>Discover how to join the chamber of commerce and how it will benefit your organization!</p>
-        <button id="join-sec-button" class="button-join">Join us!</button>
+        <a href="join.html" id="join-sec-button" class="button-join">Join us!</a>
       </section>
       <section id="event">
         <h3>Events</h3>
