--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -57,8 +57,10 @@
         </nav>
     </header>
     <main>
-        thank you
-
+        
+       <section class="tks-sec">
+        <label class="tks-join">Thank you for join us!</label>
+    </section>
 
 
 
