--- a/chamber/join.html
+++ b/chamber/join.html
@@ -64,6 +64,7 @@
                     <label class="lbl">First Name* <input type="text" name="fname" required> </label>
                     <label class="lbl">Last Name* <input type="text" name="lname" required> </label>
                     <label class="lbl">Title <input type="text" name="title" pattern="[a-zA-Z-\s]{7,}"> </label>
+                    <label class="lbl">Title <input type="text" name="title" pattern="[A-Za-z19]{5}"> </label>
                     <label class="lbl">Email* <input type="email" name="email" placeholder="someone@provider.com"
                             required> </label>
                     <label class="lbl">Phone* <input type="tel" name="phone" pattern="[0-9]{,}" placeholder="1235551234"
