--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li>Lesson #06: <a href="chamber/index.html">Chamber Website - Responsive Design</a></li>
             <li>Lesson #07: <a href="Lesson07/lazyload.html">Lazy Load</a>, <a href="chamber/index.html">High Peak Chamber</a></li>
             <li>Lesson #08: <a href="Lesson08/tablebuild.html">ACME Wildwest</a>, <a href="chamber/index.html">High Peak Chamber</a></li>
-            <li>Lesson #09: <a href="">Title</a></li>
+            <li>Lesson #09: <a href="Lesson09/prophets.html">Latter-day Prophets</a>, <a href="chamber/index.html">High Peak Chamber</a></li>
             <li>Lesson #10: <a href="">Title</a></li>
             <li>Lesson #11: <a href="">Title</a></li>
         </ul>    
