--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -57,62 +57,12 @@
     </nav>
   </header>
   <main>
-    <div class="main-grid">
-      <section id="hero">
-        <h2>Welcome to High Peak Chamber</h2>
-        <a href="join.html" id="hero-sec-button" class="button-join">Join us!</a>
-        
-        <picture class="hero-picture">
-          <img src="images/wdd230-org-large-6000.webp" alt="hero picture" sizes="50vw" srcset="images/wdd230-org-small-1000.webp 360w,
-                  images/wdd230-org-medium-3000.webp 610w,
-                  images/wdd230-org-large-6000.webp 820w">
-
-        </picture>
-
-
-      </section>
-      <section id="news-release">
-        <h3>New Release</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste hic placeat cupiditate aperiam laudantium ex,
-          quo maxime in delectus possimus. Earum reiciendis error vero adipisci quo tempore expedita provident ad.</p>
-      </section>
-      <section id="spotlights">
-        <section id="spot1">Spotlight 1</section>
-        <section id="spot2">Spotlight 2</section>
-        <section id="spot3">Spotlight 3</section>
-      </section>
-      <section id="join">
-        <p>Discover how to join the chamber of commerce and how it will benefit your organization!</p>
-        <a href="join.html" id="join-sec-button" class="button-join">Join us!</a>
-      </section>
-      <section id="event">
-        <h3>Events</h3>
-
-
-
-      </section>
-      <section id="weather">
-        <h3>Weather</h3>
-        <div id="centered">
-          <img src="images/weather-icon.webp" alt="weather icon">
-          <h2><span id="temp">33</span> °F</h2>
-        </div>
-        <div id="weather-desc">
-          Partly Cloudy
-        </div>
-        <div id="weather-data">
-          <div id="weather-data-speed">
-            Wind Speed:  <span id="speed">22</span> mph
-            
-          </div>
-          <div id="weather-data-chill">
-            Wind Chill:  <span id="chill">N/A</span>
-          </div>
-
-        </div>
-      </section>
-
+    <div class="grid-table-switcher">
+      <button id="gridview"><img src="images/gridview.png" alt="To switch back and ford between grid view and table view"></button>
+      <button id="listview"><img src="images/listview.png" alt="To switch back and ford between grid view and table view"></button>
     </div>
+    <div id="mainDiv" class="grid"></div>
+
   </main>
   <footer>
     <div class="f-wrapper">
@@ -134,7 +84,7 @@
     </div>
   </footer>
   <script src="js/scripts.js"></script>
-  <script src="js/windchill.js"></script>
+  <script src="js/directory.js"></script>
 </body>
 
 </html>
