--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -49,7 +49,7 @@ Location:  American Fork, Utah County, Utah, United States, http://sws.geonames.
             </div>
             <ul id="primaryNav">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="directory.html">Directory</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Discover</a></li>
                 <li>
