--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -44,7 +44,7 @@
             </div>
             <ul id="primaryNav">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="directory.html">Directory</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="discover.html">Discover</a></li>
                 <li>
