--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="css/small.css" />
   <link rel="stylesheet" href="css/medium.css" />
   <link rel="stylesheet" href="css/large.css" />
+  
 </head>
 
 <body>
@@ -92,13 +93,17 @@
 
       </section>
       <section id="weather">
-        <h3>Weather</h3>
+        <h3>American Fork, UT <br>Weather</h3>
         <div id="centered">
-          <img src="images/weather-icon.webp" alt="weather icon">
-          <h2><span id="temp">33</span> °F</h2>
+          <img id="weather-icon" src="" alt="weather icon">
+          <h2><span id="temp"></span> <span id="tempType"></span></h2>
+          <div>
+            <button id="cf">°C/°F</button>
+          </div>
         </div>
         <div id="weather-desc">
-          Partly Cloudy
+          weather-desc
+          <!-- Partly Cloudy -->
         </div>
         <div id="weather-data">
           <div id="weather-data-speed">
@@ -133,8 +138,10 @@
       <p>&copy; <span id="year">2022</span> | Cristian Fernandez | Utah</p>
     </div>
   </footer>
+  <script src="js/weatherapi.js"></script>
   <script src="js/scripts.js"></script>
   <script src="js/windchill.js"></script>
+  
 </body>
 
 </html>
