--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -50,7 +50,7 @@ Location:  American Fork, Utah County, Utah, United States, http://sws.geonames.
             <ul id="primaryNav">
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="#">Discover</a></li>
                 <li>
                     <a href="https://www.facebook.com" target="_blank">
