--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,7 +46,7 @@
       <ul id="primaryNav">
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="directory.html">Directory</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
         <li><a href="discover.html">Discover</a></li>
         <li>
           <a href="https://www.facebook.com" target="_blank">
@@ -77,10 +77,10 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste hic placeat cupiditate aperiam laudantium ex,
           quo maxime in delectus possimus. Earum reiciendis error vero adipisci quo tempore expedita provident ad.</p>
       </section>
-      <section id="spotlights">
-        <section id="spot1">Spotlight 1</section>
+      <section id="spotlights" class="grid">
+        <!-- <section id="spot1">Spotlight 1</section>
         <section id="spot2">Spotlight 2</section>
-        <section id="spot3">Spotlight 3</section>
+        <section id="spot3">Spotlight 3</section> -->
       </section>
       <section id="join">
         <p>Discover how to join the chamber of commerce and how it will benefit your organization!</p>
@@ -138,9 +138,11 @@
       <p>&copy; <span id="year">2022</span> | Cristian Fernandez | Utah</p>
     </div>
   </footer>
+  <script src="js/directory.js"></script>
   <script src="js/weatherapi.js"></script>
   <script src="js/scripts.js"></script>
   <script src="js/windchill.js"></script>
+  
   
 </body>
 
