--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li>Lesson #08: <a href="Lesson08/tablebuild.html">ACME Wildwest</a>, <a href="chamber/index.html">High Peak Chamber</a></li>
             <li>Lesson #09: <a href="Lesson09/prophets.html">Latter-day Prophets</a>, <a href="chamber/index.html">High Peak Chamber</a></li>
             <li>Lesson #10: <a href="Lesson10/weather-api.html">OpenWeatherMap.org API Test</a>, <a href="chamber/index.html">High Peak Chamber</a></li>
-            <li>Lesson #11: <a href="">Title</a></li>
+            <li>Lesson #11: <a href="chamber/index.html"></a>High peal Chamber</li>
         </ul>    
         
 
