--- a/chamber/index.html
+++ b/chamber/index.html
@@ -87,9 +87,11 @@
         <a href="join.html" id="join-sec-button" class="button-join">Join us!</a>
       </section>
       <section id="event">
-        <h3>Events</h3>
-
-
+        <h3>Ribbon Cutting</h3>
+        <br>
+        <h4>💎 The Diamond Shack</h4>
+        <br>
+        <p>Join us for the grand opening of The Diamond Shack, Thursday at 1:00 p.m.</p>
 
       </section>
       <section id="weather">
@@ -107,7 +109,7 @@
         </div>
         <div id="weather-data">
           <div id="weather-data-speed">
-            Wind Speed:  <span id="speed">22</span> mph
+            Wind Speed:  <span id="speed">22</span> <span id="speed-type">mph</span>
             
           </div>
           <div id="weather-data-chill">
