--- a/chamber/index.html
+++ b/chamber/index.html
@@ -64,9 +64,10 @@
         <a href="join.html" id="hero-sec-button" class="button-join">Join us!</a>
         
         <picture class="hero-picture">
-          <img src="images/wdd230-org-large-6000.webp" alt="hero picture" sizes="50vw" srcset="images/wdd230-org-small-1000.webp 360w,
-                  images/wdd230-org-medium-3000.webp 610w,
-                  images/wdd230-org-large-6000.webp 820w">
+          <img src="images/wdd230-org-large-6000.webp" alt="hero picture" sizes="50vw" 
+            srcset="images/wdd230-org-small-1000.webp 360w,
+                    images/wdd230-org-medium-3000.webp 610w,
+                    images/wdd230-org-large-6000.webp 820w">
 
         </picture>
 
