--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -74,11 +74,8 @@
           <div class="sub-main-fields">
           <div class="fields">
             <span>Destination*</span>
-            <select class="select-lbl" name="destiantion" required>
-              <option value="volvo">Volvo</option>
-              <option value="saab">Saab</option>
-              <option value="fiat">Fiat</option>
-              <option value="audi">Audi</option>
+            <select id="destiantion" class="select-lbl" name="destiantion" required>
+
             </select>
             <!-- <label class="lbl"><input type="" name="destination" required> </label> -->
           </div>
@@ -96,10 +93,12 @@
           <div class="fields">
             <span>Room / guest*</span>
             <select class="select-lbl" name="room" required>
-              <option value="volvo">Volvo</option>
-              <option value="saab">Saab</option>
-              <option value="fiat">Fiat</option>
-              <option value="audi">Audi</option>
+              <option value="1 Room 1 Guess">1 Room 2 Guess</option>
+              <option value="1 Room 2 Guess">1 Room 1 Guess</option>
+              <option value="1 Room 3 Guess">1 Room 3 Guess</option>
+              <option value="1 Room 4+ Guess">1 Room 4+ Guess</option>
+              <option value="2 Room 4 Guess">2 Room 4 Guess</option>
+              <option value="2 Room 4+ Guess">2 Room 4+ Guess</option>
             </select>
           </div>
         </div>
