--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -75,7 +75,7 @@
           <div class="fields">
             <span>Destination*</span>
             <select id="destiantion" class="select-lbl" name="destiantion" required>
-
+              <option value="">--Select a Temple--</option>
             </select>
             <!-- <label class="lbl"><input type="" name="destination" required> </label> -->
           </div>
@@ -106,6 +106,16 @@
         <input type="submit" value="Search room" class="button-submit">
 
       </form>
+
+      <div class="temple-info">
+        <h3>name</h3>
+        <p>address</p>
+        <p>phone</p>
+        <div class="marco">
+        <img src="https://assets.ldscdn.org/41/0a/410a29915aac112f15a293d963abfadee117776f1068523/vernal_temple_lds.jpeg" alt="Temple picture">
+      </div>
+      </div>
+
 
     </section>
 
