--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -62,66 +62,132 @@
   <main>
     <section class="main-form">
       <picture class="hero-picture">
-        <img src="images/main-pic-380.webp" alt="main picture" sizes="80vw" 
-          srcset="images/main-pic-380.webp 380w,
+        <img src="images/main-pic-380.webp" alt="main picture" sizes="80vw" srcset="images/main-pic-380.webp 380w,
                   images/main-pic-820.webp 610w,
                   images/main-pic-1080.webp 820w">
-
       </picture>
-      
       <form method="get" action="thankyou.html" id="form-make-reservation">
         <fieldset class="main-fields">
           <div class="sub-main-fields">
-          <div class="fields">
-            <span>Destination*</span>
-            <select id="destiantion" class="select-lbl" name="destiantion" required>
-              <option value="">--Select a Temple--</option>
-            </select>
-            <!-- <label class="lbl"><input type="" name="destination" required> </label> -->
+            <div class="fields">
+              <span>Destination*</span>
+              <select id="destiantion" class="select-lbl" name="destiantion" required>
+                <option value="">--Select a Temple--</option>
+              </select>
+              <!-- <label class="lbl"><input type="" name="destination" required> </label> -->
+            </div>
+            <div class="fields">
+              <span>Check in*</span>
+              <label class="lbl"><input type="date" name="check-in" required> </label>
+            </div>
           </div>
-          <div class="fields">
-            <span>Check in*</span>
-            <label class="lbl"><input type="date" name="check-in" required> </label>
-          </div>
-        </div>
-        <div class="sub-main-fields">
-          <div class="fields">
-            <span>Check out*</span>
-            <label class="lbl"><input type="date" name="check-out" required> </label>
-          </div>
+          <div class="sub-main-fields">
+            <div class="fields">
+              <span>Check out*</span>
+              <label class="lbl"><input type="date" name="check-out" required> </label>
+            </div>
 
-          <div class="fields">
-            <span>Room / guest*</span>
-            <select class="select-lbl" name="room" required>
-              <option value="1 Room 1 Guess">1 Room 2 Guess</option>
-              <option value="1 Room 2 Guess">1 Room 1 Guess</option>
-              <option value="1 Room 3 Guess">1 Room 3 Guess</option>
-              <option value="1 Room 4+ Guess">1 Room 4+ Guess</option>
-              <option value="2 Room 4 Guess">2 Room 4 Guess</option>
-              <option value="2 Room 4+ Guess">2 Room 4+ Guess</option>
-            </select>
+            <div class="fields">
+              <span>Room / guest*</span>
+              <select class="select-lbl" name="room" required>
+                <option value="1 Room 1 Guess">1 Room 2 Guess</option>
+                <option value="1 Room 2 Guess">1 Room 1 Guess</option>
+                <option value="1 Room 3 Guess">1 Room 3 Guess</option>
+                <option value="1 Room 4+ Guess">1 Room 4+ Guess</option>
+                <option value="2 Room 4 Guess">2 Room 4 Guess</option>
+                <option value="2 Room 4+ Guess">2 Room 4+ Guess</option>
+              </select>
+            </div>
           </div>
-        </div>
         </fieldset>
         <input type="submit" value="Search room" class="button-submit">
 
       </form>
-
       <div class="temple-info">
-        <h3>name</h3>
-        <p>address</p>
-        <p>phone</p>
-        <div class="marco">
-        <img src="https://assets.ldscdn.org/41/0a/410a29915aac112f15a293d963abfadee117776f1068523/vernal_temple_lds.jpeg" alt="Temple picture">
+        <h3><span id="temple-name"></span></h3>
+        <p><span id="temple-address"></span></p>
+        <p><span id="temple-phone"></span></p>
+        <img id="temple-img" src="" alt="Temple picture">
       </div>
+    </section>
+    <h3>Specialized Services and Amenities</h3>
+    <section class="amenities">
+      <div>
+        <ul>
+          <li>Free access to changing rooms and bathroom facilities for temple patrons</li>
+          <li>Playroom and low-cost, short-term babysitting services for the children of patrons</li>
+          <li>Long-term stay accommodations in kitchenette suites for full-time temple missionaries</li>
+          <li>Temple history themed reception and sitting area</li>
+          <li>Wedding reception hall that can be easily customized with a simple catering menu</li>
+          <li>Kitchen access for food preparation and serving</li>
+          <li>Family search center that supports family search and ordinance work</li>
+        </ul>
       </div>
+      <div>
+        <ul>
+          <li>Breakfast</li>
+          <li>Exercise/workout room</li>
+          <li>Indoor pool</li>
+          <li>WiFi high-speed internet access and smart TVs</li>
+          <li>Parking</li>
+          <li>Temple shuttle</li>
+          <li>Family history consultation and family ordinance card service</li>
+        </ul>
+      </div>
+    </section>
+    <div class="mid-area">
+    <section id="weather">
 
+      <!-- https://api.openweathermap.org/data/2.5/forecast?q=Orem,UT,US&appid=a1cdf4d637caf46a9288686067728afa&units=imperial -->
+      <h3 id="city-weather">American<br>Weather</h3>
+      <div id="five-days-weather">
+        
+        <div class="weather-day">
+          <h5>Monday</h5>
+          <h4>94.3 °F</h4>
+          <img src="https://openweathermap.org/img/w/04d.png" alt="">
+          <p>Broken Clouds</p>
+        </div>
+        <div class="weather-day"><h1>hola</h1></div>
+        <div class="weather-day"><h1>hola</h1></div>
+        <div class="weather-day"><h1>hola</h1></div>
+        <div class="weather-day"><h1>hola</h1></div>
+        <!-- <img id="weather-icon" src="" alt="weather icon">
+        <h2><span id="temp"></span> <span id="tempType"></span></h2>
+        <div>
+          <button id="cf">°C/°F</button>
+        </div>
+      </div>
+      <div id="weather-desc">
+        weather-desc -->
+      </div>
 
     </section>
+    <section id="adds">
+      <div id="adds-top">
+        <div>
+          <span>&#128161</span>
+          <h3>Fexible Rates</h3>
+          <p>We offer easy cancelation options.</p>
+        </div>
+        <div>
+          <span>&#128178</span>
+          <h3>Best Rate Guarantee</h3>
+          <p>We'll match any lower available rate.</p>
+        </div>
+      </div>
 
 
-
-
+      <div id="adds-bottom">
+        <span>&#11088</span>
+        <h3>Earn Free Nights</h3>
+        <p>Get a free night starting at just 3000 points.</p>
+      </div>
+    </section>
+  </div>
+    <section id="beds">
+beds
+    </section>
   </main>
   <footer>
     <div class="f-wrapper">
@@ -130,8 +196,10 @@
       </div>
       <div class="address">
         <h2>The Temple Inn & Suites</h2>
-        <a href="https://goo.gl/maps/mwkH1ERpTsoVr86j7"><p>4800 Montgomery Ln #300<br>
-        Bethesda, MD</p></a>
+        <a href="https://goo.gl/maps/mwkH1ERpTsoVr86j7">
+          <p>4800 Montgomery Ln #300<br>
+            Bethesda, MD</p>
+        </a>
       </div>
       <div class="contact">
         <p>Info@TempleInnSuites.com</p>
